Support set alert rule specific labels and annotations
Signed-off-by: Bougou <bougou@126.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/alertmanager.rules.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/alertmanager.rules.yaml
@@ -35,6 +35,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerFailedReload }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerFailedReload | indent 8 }}
+{{- end }}
         description: Configuration has failed to load for {{`{{`}} $labels.namespace {{`}}`}}/{{`{{`}} $labels.pod{{`}}`}}.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/alertmanager/alertmanagerfailedreload
         summary: Reloading an Alertmanager configuration has failed.
@@ -48,11 +51,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "AlertmanagerFailedReload" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerFailedReload }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerFailedReload }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -65,6 +71,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerMembersInconsistent }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerMembersInconsistent | indent 8 }}
 {{- end }}
         description: Alertmanager {{`{{`}} $labels.namespace {{`}}`}}/{{`{{`}} $labels.pod{{`}}`}} has only found {{`{{`}} $value {{`}}`}} members of the {{`{{`}}$labels.job{{`}}`}} cluster.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/alertmanager/alertmanagermembersinconsistent
@@ -81,11 +90,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "AlertmanagerMembersInconsistent" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerMembersInconsistent }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerMembersInconsistent }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -98,6 +110,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerFailedToSendAlerts }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerFailedToSendAlerts | indent 8 }}
 {{- end }}
         description: Alertmanager {{`{{`}} $labels.namespace {{`}}`}}/{{`{{`}} $labels.pod{{`}}`}} failed to send {{`{{`}} $value | humanizePercentage {{`}}`}} of notifications to {{`{{`}} $labels.integration {{`}}`}}.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/alertmanager/alertmanagerfailedtosendalerts
@@ -115,11 +130,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "AlertmanagerFailedToSendAlerts" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerFailedToSendAlerts }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerFailedToSendAlerts }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -132,6 +150,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerClusterFailedToSendAlerts }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerClusterFailedToSendAlerts | indent 8 }}
 {{- end }}
         description: The minimum notification failure rate to {{`{{`}} $labels.integration {{`}}`}} sent from any instance in the {{`{{`}}$labels.job{{`}}`}} cluster is {{`{{`}} $value | humanizePercentage {{`}}`}}.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/alertmanager/alertmanagerclusterfailedtosendalerts
@@ -149,11 +170,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "AlertmanagerClusterFailedToSendAlerts" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerClusterFailedToSendAlerts }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerClusterFailedToSendAlerts }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -166,6 +190,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerClusterFailedToSendAlerts }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerClusterFailedToSendAlerts | indent 8 }}
 {{- end }}
         description: The minimum notification failure rate to {{`{{`}} $labels.integration {{`}}`}} sent from any instance in the {{`{{`}}$labels.job{{`}}`}} cluster is {{`{{`}} $value | humanizePercentage {{`}}`}}.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/alertmanager/alertmanagerclusterfailedtosendalerts
@@ -183,11 +210,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "AlertmanagerClusterFailedToSendAlerts" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerClusterFailedToSendAlerts }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerClusterFailedToSendAlerts }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -200,6 +230,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerConfigInconsistent }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerConfigInconsistent | indent 8 }}
 {{- end }}
         description: Alertmanager instances within the {{`{{`}}$labels.job{{`}}`}} cluster have different configurations.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/alertmanager/alertmanagerconfiginconsistent
@@ -215,11 +248,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "AlertmanagerConfigInconsistent" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerConfigInconsistent }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerConfigInconsistent }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -232,6 +268,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerClusterDown }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerClusterDown | indent 8 }}
 {{- end }}
         description: '{{`{{`}} $value | humanizePercentage {{`}}`}} of Alertmanager instances within the {{`{{`}}$labels.job{{`}}`}} cluster have been up for less than half of the last 5m.'
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/alertmanager/alertmanagerclusterdown
@@ -253,11 +292,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "AlertmanagerClusterDown" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerClusterDown }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerClusterDown }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -270,6 +312,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.alertmanager | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerClusterCrashlooping }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.AlertmanagerClusterCrashlooping | indent 8 }}
 {{- end }}
         description: '{{`{{`}} $value | humanizePercentage {{`}}`}} of Alertmanager instances within the {{`{{`}}$labels.job{{`}}`}} cluster have restarted at least 5 times in the last 10m.'
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/alertmanager/alertmanagerclustercrashlooping
@@ -291,11 +336,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "AlertmanagerClusterCrashlooping" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.alertmanager .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerClusterCrashlooping }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.alertmanager }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.AlertmanagerClusterCrashlooping }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
