--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kube-state-metrics.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kube-state-metrics.yaml
@@ -34,6 +34,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubeStateMetrics }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubeStateMetrics | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeStateMetricsListErrors }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeStateMetricsListErrors | indent 8 }}
+{{- end }}
         description: kube-state-metrics is experiencing errors at an elevated rate in list operations. This is likely causing it to not be able to expose metrics about Kubernetes objects correctly or at all.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kube-state-metrics/kubestatemetricslisterrors
         summary: kube-state-metrics is experiencing errors in list operations.
@@ -48,11 +51,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeStateMetricsListErrors" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics .Values.defaultRules.additionalRuleSpecificLabels.KubeStateMetricsListErrors }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeStateMetricsListErrors }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -65,6 +71,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubeStateMetrics }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubeStateMetrics | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeStateMetricsWatchErrors }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeStateMetricsWatchErrors | indent 8 }}
 {{- end }}
         description: kube-state-metrics is experiencing errors at an elevated rate in watch operations. This is likely causing it to not be able to expose metrics about Kubernetes objects correctly or at all.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kube-state-metrics/kubestatemetricswatcherrors
@@ -80,11 +89,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeStateMetricsWatchErrors" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics .Values.defaultRules.additionalRuleSpecificLabels.KubeStateMetricsWatchErrors }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeStateMetricsWatchErrors }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -98,6 +110,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubeStateMetrics }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubeStateMetrics | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeStateMetricsShardingMismatch }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeStateMetricsShardingMismatch | indent 8 }}
+{{- end }}
         description: kube-state-metrics pods are running with different --total-shards configuration, some Kubernetes objects may be exposed multiple times or not exposed at all.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kube-state-metrics/kubestatemetricsshardingmismatch
         summary: kube-state-metrics sharding is misconfigured.
@@ -108,11 +123,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeStateMetricsShardingMismatch" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics .Values.defaultRules.additionalRuleSpecificLabels.KubeStateMetricsShardingMismatch }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeStateMetricsShardingMismatch }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -125,6 +143,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubeStateMetrics }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubeStateMetrics | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeStateMetricsShardsMissing }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeStateMetricsShardsMissing | indent 8 }}
 {{- end }}
         description: kube-state-metrics shards are missing, some Kubernetes objects are not being exposed.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kube-state-metrics/kubestatemetricsshardsmissing
@@ -140,11 +161,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeStateMetricsShardsMissing" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics .Values.defaultRules.additionalRuleSpecificLabels.KubeStateMetricsShardsMissing }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubeStateMetrics }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeStateMetricsShardsMissing }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
