--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-resources.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-resources.yaml
@@ -34,6 +34,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeCPUOvercommit }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeCPUOvercommit | indent 8 }}
+{{- end }}
         description: Cluster {{`{{`}} $labels.cluster {{`}}`}} has overcommitted CPU resource requests for Pods by {{`{{`}} $value {{`}}`}} CPU shares and cannot tolerate node failure.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubecpuovercommit
         summary: Cluster has overcommitted CPU resource requests.
@@ -47,11 +50,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeCPUOvercommit" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources .Values.defaultRules.additionalRuleSpecificLabels.KubeCPUOvercommit }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeCPUOvercommit }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -64,6 +70,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeMemoryOvercommit }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeMemoryOvercommit | indent 8 }}
 {{- end }}
         description: Cluster {{`{{`}} $labels.cluster {{`}}`}} has overcommitted memory resource requests for Pods by {{`{{`}} $value | humanize {{`}}`}} bytes and cannot tolerate node failure.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubememoryovercommit
@@ -78,11 +87,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeMemoryOvercommit" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources .Values.defaultRules.additionalRuleSpecificLabels.KubeMemoryOvercommit }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeMemoryOvercommit }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -95,6 +107,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeCPUQuotaOvercommit }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeCPUQuotaOvercommit | indent 8 }}
 {{- end }}
         description: Cluster {{`{{`}} $labels.cluster {{`}}`}}  has overcommitted CPU resource requests for Namespaces.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubecpuquotaovercommit
@@ -110,11 +125,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeCPUQuotaOvercommit" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources .Values.defaultRules.additionalRuleSpecificLabels.KubeCPUQuotaOvercommit }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeCPUQuotaOvercommit }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -127,6 +145,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeMemoryQuotaOvercommit }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeMemoryQuotaOvercommit | indent 8 }}
 {{- end }}
         description: Cluster {{`{{`}} $labels.cluster {{`}}`}}  has overcommitted memory resource requests for Namespaces.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubememoryquotaovercommit
@@ -142,11 +163,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeMemoryQuotaOvercommit" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources .Values.defaultRules.additionalRuleSpecificLabels.KubeMemoryQuotaOvercommit }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeMemoryQuotaOvercommit }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -159,6 +183,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeQuotaAlmostFull }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeQuotaAlmostFull | indent 8 }}
 {{- end }}
         description: Namespace {{`{{`}} $labels.namespace {{`}}`}} is using {{`{{`}} $value | humanizePercentage {{`}}`}} of its {{`{{`}} $labels.resource {{`}}`}} quota.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubequotaalmostfull
@@ -174,11 +201,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeQuotaAlmostFull" "severity" "info" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources .Values.defaultRules.additionalRuleSpecificLabels.KubeQuotaAlmostFull }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeQuotaAlmostFull }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -191,6 +221,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeQuotaFullyUsed }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeQuotaFullyUsed | indent 8 }}
 {{- end }}
         description: Namespace {{`{{`}} $labels.namespace {{`}}`}} is using {{`{{`}} $value | humanizePercentage {{`}}`}} of its {{`{{`}} $labels.resource {{`}}`}} quota.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubequotafullyused
@@ -206,11 +239,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeQuotaFullyUsed" "severity" "info" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources .Values.defaultRules.additionalRuleSpecificLabels.KubeQuotaFullyUsed }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeQuotaFullyUsed }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -223,6 +259,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeQuotaExceeded }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeQuotaExceeded | indent 8 }}
 {{- end }}
         description: Namespace {{`{{`}} $labels.namespace {{`}}`}} is using {{`{{`}} $value | humanizePercentage {{`}}`}} of its {{`{{`}} $labels.resource {{`}}`}} quota.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubequotaexceeded
@@ -238,11 +277,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeQuotaExceeded" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources .Values.defaultRules.additionalRuleSpecificLabels.KubeQuotaExceeded }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeQuotaExceeded }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -255,6 +297,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesResources | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.CPUThrottlingHigh }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.CPUThrottlingHigh | indent 8 }}
 {{- end }}
         description: '{{`{{`}} $value | humanizePercentage {{`}}`}} throttling of CPU in namespace {{`{{`}} $labels.namespace {{`}}`}} for container {{`{{`}} $labels.container {{`}}`}} in pod {{`{{`}} $labels.pod {{`}}`}}.'
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/cputhrottlinghigh
@@ -270,11 +315,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "CPUThrottlingHigh" "severity" "info" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources .Values.defaultRules.additionalRuleSpecificLabels.CPUThrottlingHigh }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesResources }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.CPUThrottlingHigh }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
