--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -169,6 +169,16 @@ defaultRules:
     prometheus: {}
     prometheusOperator: {}
 
+  ## Additional labels for specific PrometheusRule alert, key is alert name, value is a map of labels.
+  ## Example:
+  ##  additionalRuleSpecificLabels:
+  ##    KubePodCrashLooping:
+  ##      alertinstance: "{{ $labels.namespace }}/{{ $labels.pod }}"
+  additionalRuleSpecificLabels: {}
+
+  ## Additional annotations for specific PrometheusRule alert, key is alert name, value is a map of annotations.
+  additionalRuleSpecificAnnotations: {}
+
   additionalAggregationLabels: []
 
   ## Prefix for runbook URLs. Use this to override the first part of the runbookURLs that is common to all rules.
