--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kube-apiserver-slos.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kube-apiserver-slos.yaml
@@ -33,6 +33,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubeApiserverSlos }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubeApiserverSlos | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeAPIErrorBudgetBurn }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeAPIErrorBudgetBurn | indent 8 }}
+{{- end }}
         description: The API server is burning too much error budget.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeapierrorbudgetburn
         summary: The API server is burning too much error budget.
@@ -48,11 +51,14 @@ spec:
         long: 1h
         severity: {{ dig "KubeAPIErrorBudgetBurn" "severity" "critical" .Values.customRules }}
         short: 5m
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos .Values.defaultRules.additionalRuleSpecificLabels.KubeAPIErrorBudgetBurn }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeAPIErrorBudgetBurn }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -65,6 +71,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubeApiserverSlos }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubeApiserverSlos | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeAPIErrorBudgetBurn }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeAPIErrorBudgetBurn | indent 8 }}
 {{- end }}
         description: The API server is burning too much error budget.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeapierrorbudgetburn
@@ -81,11 +90,14 @@ spec:
         long: 6h
         severity: {{ dig "KubeAPIErrorBudgetBurn" "severity" "critical" .Values.customRules }}
         short: 30m
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos .Values.defaultRules.additionalRuleSpecificLabels.KubeAPIErrorBudgetBurn }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeAPIErrorBudgetBurn }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -98,6 +110,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubeApiserverSlos }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubeApiserverSlos | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeAPIErrorBudgetBurn }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeAPIErrorBudgetBurn | indent 8 }}
 {{- end }}
         description: The API server is burning too much error budget.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeapierrorbudgetburn
@@ -114,11 +129,14 @@ spec:
         long: 1d
         severity: {{ dig "KubeAPIErrorBudgetBurn" "severity" "warning" .Values.customRules }}
         short: 2h
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos .Values.defaultRules.additionalRuleSpecificLabels.KubeAPIErrorBudgetBurn }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeAPIErrorBudgetBurn }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -131,6 +149,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubeApiserverSlos }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubeApiserverSlos | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeAPIErrorBudgetBurn }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeAPIErrorBudgetBurn | indent 8 }}
 {{- end }}
         description: The API server is burning too much error budget.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeapierrorbudgetburn
@@ -147,11 +168,14 @@ spec:
         long: 3d
         severity: {{ dig "KubeAPIErrorBudgetBurn" "severity" "warning" .Values.customRules }}
         short: 6h
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos .Values.defaultRules.additionalRuleSpecificLabels.KubeAPIErrorBudgetBurn }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeAPIErrorBudgetBurn }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
