--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-scheduler.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-scheduler.yaml
@@ -34,6 +34,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubeSchedulerAlerting }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubeSchedulerAlerting | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeSchedulerDown }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeSchedulerDown | indent 8 }}
+{{- end }}
         description: KubeScheduler has disappeared from Prometheus target discovery.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeschedulerdown
         summary: Target disappeared from Prometheus target discovery.
@@ -44,11 +47,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeSchedulerDown" "severity" "critical" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeSchedulerAlerting }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeSchedulerAlerting .Values.defaultRules.additionalRuleSpecificLabels.KubeSchedulerDown }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubeSchedulerAlerting }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeSchedulerDown }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
