--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system.yaml
@@ -33,6 +33,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesSystem }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesSystem | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeVersionMismatch }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeVersionMismatch | indent 8 }}
+{{- end }}
         description: There are {{`{{`}} $value {{`}}`}} different semantic versions of Kubernetes components running.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeversionmismatch
         summary: Different semantic versions of Kubernetes components running.
@@ -43,11 +46,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeVersionMismatch" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesSystem }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesSystem .Values.defaultRules.additionalRuleSpecificLabels.KubeVersionMismatch }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesSystem }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeVersionMismatch }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -60,6 +66,9 @@ spec:
 {{- end }}
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesSystem }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesSystem | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.KubeClientErrors }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.KubeClientErrors | indent 8 }}
 {{- end }}
         description: Kubernetes API server client '{{`{{`}} $labels.job {{`}}`}}/{{`{{`}} $labels.instance {{`}}`}}' is experiencing {{`{{`}} $value | humanizePercentage {{`}}`}} errors.'
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeclienterrors
@@ -75,11 +84,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "KubeClientErrors" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesSystem }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesSystem .Values.defaultRules.additionalRuleSpecificLabels.KubeClientErrors }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesSystem }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.KubeClientErrors }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
