--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/node-network.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/node-network.yaml
@@ -33,6 +33,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.network }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.network | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.NodeNetworkInterfaceFlapping }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.NodeNetworkInterfaceFlapping | indent 8 }}
+{{- end }}
         description: Network interface "{{`{{`}} $labels.device {{`}}`}}" changing its up status often on node-exporter {{`{{`}} $labels.namespace {{`}}`}}/{{`{{`}} $labels.pod {{`}}`}}
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/general/nodenetworkinterfaceflapping
         summary: Network interface is often changing its status
@@ -43,11 +46,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "NodeNetworkInterfaceFlapping" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.network }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.network .Values.defaultRules.additionalRuleSpecificLabels.NodeNetworkInterfaceFlapping }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.network }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.NodeNetworkInterfaceFlapping }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
