--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/prometheus-operator.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/prometheus-operator.yaml
@@ -35,6 +35,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorListErrors }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorListErrors | indent 8 }}
+{{- end }}
         description: Errors while performing List operations in controller {{`{{`}}$labels.controller{{`}}`}} in {{`{{`}}$labels.namespace{{`}}`}} namespace.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/prometheus-operator/prometheusoperatorlisterrors
         summary: Errors while performing list operations in controller.
@@ -45,11 +48,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "PrometheusOperatorListErrors" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorListErrors }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorListErrors }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -63,6 +69,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorWatchErrors }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorWatchErrors | indent 8 }}
+{{- end }}
         description: Errors while performing watch operations in controller {{`{{`}}$labels.controller{{`}}`}} in {{`{{`}}$labels.namespace{{`}}`}} namespace.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/prometheus-operator/prometheusoperatorwatcherrors
         summary: Errors while performing watch operations in controller.
@@ -73,11 +82,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "PrometheusOperatorWatchErrors" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorWatchErrors }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorWatchErrors }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -91,6 +103,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorSyncFailed }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorSyncFailed | indent 8 }}
+{{- end }}
         description: Controller {{`{{`}} $labels.controller {{`}}`}} in {{`{{`}} $labels.namespace {{`}}`}} namespace fails to reconcile {{`{{`}} $value {{`}}`}} objects.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/prometheus-operator/prometheusoperatorsyncfailed
         summary: Last controller reconciliation failed
@@ -101,11 +116,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "PrometheusOperatorSyncFailed" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorSyncFailed }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorSyncFailed }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -119,6 +137,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorReconcileErrors }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorReconcileErrors | indent 8 }}
+{{- end }}
         description: '{{`{{`}} $value | humanizePercentage {{`}}`}} of reconciling operations failed for {{`{{`}} $labels.controller {{`}}`}} controller in {{`{{`}} $labels.namespace {{`}}`}} namespace.'
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/prometheus-operator/prometheusoperatorreconcileerrors
         summary: Errors while reconciling objects.
@@ -129,11 +150,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "PrometheusOperatorReconcileErrors" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorReconcileErrors }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorReconcileErrors }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -147,6 +171,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorStatusUpdateErrors }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorStatusUpdateErrors | indent 8 }}
+{{- end }}
         description: '{{`{{`}} $value | humanizePercentage {{`}}`}} of status update operations failed for {{`{{`}} $labels.controller {{`}}`}} controller in {{`{{`}} $labels.namespace {{`}}`}} namespace.'
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/prometheus-operator/prometheusoperatorstatusupdateerrors
         summary: Errors while updating objects status.
@@ -157,11 +184,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "PrometheusOperatorStatusUpdateErrors" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorStatusUpdateErrors }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorStatusUpdateErrors }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -175,6 +205,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorNodeLookupErrors }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorNodeLookupErrors | indent 8 }}
+{{- end }}
         description: Errors while reconciling Prometheus in {{`{{`}} $labels.namespace {{`}}`}} Namespace.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/prometheus-operator/prometheusoperatornodelookuperrors
         summary: Errors while reconciling Prometheus.
@@ -185,11 +218,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "PrometheusOperatorNodeLookupErrors" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorNodeLookupErrors }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorNodeLookupErrors }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -203,6 +239,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorNotReady }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorNotReady | indent 8 }}
+{{- end }}
         description: Prometheus operator in {{`{{`}} $labels.namespace {{`}}`}} namespace isn't ready to reconcile {{`{{`}} $labels.controller {{`}}`}} resources.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/prometheus-operator/prometheusoperatornotready
         summary: Prometheus operator not ready
@@ -213,11 +252,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "PrometheusOperatorNotReady" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorNotReady }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorNotReady }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -231,6 +273,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.prometheusOperator | indent 8 }}
 {{- end }}
+{{- if .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorRejectedResources }}
+{{ toYaml .Values.defaultRules.additionalRuleSpecificAnnotations.PrometheusOperatorRejectedResources | indent 8 }}
+{{- end }}
         description: Prometheus operator in {{`{{`}} $labels.namespace {{`}}`}} namespace rejected {{`{{`}} printf "%0.0f" $value {{`}}`}} {{`{{`}} $labels.controller {{`}}`}}/{{`{{`}} $labels.resource {{`}}`}} resources.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/prometheus-operator/prometheusoperatorrejectedresources
         summary: Resources rejected by Prometheus operator
@@ -241,11 +286,14 @@ spec:
       {{- end }}
       labels:
         severity: {{ dig "PrometheusOperatorRejectedResources" "severity" "warning" .Values.customRules }}
-      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorRejectedResources }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.defaultRules.additionalRuleGroupLabels.prometheusOperator }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleSpecificLabels.PrometheusOperatorRejectedResources }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
