--- a/charts/kube-prometheus-stack/templates/deprecation.yaml
+++ b/charts/kube-prometheus-stack/templates/deprecation.yaml
@@ -1,18 +1,18 @@
 {{- if .Values.checkDeprecation }}
    # The *NilUsesHelmValues can be removed 09/25, about a year after deprecation
    {{- if .Values.prometheus.prometheusSpec.podMonitorSelectorNilUsesHelmValues }}
-      {{ fail "`podMonitorSelectorNilUsesHelmValues` does no longer exist. See README section 'Upgrading Chart'" }}
+      {{ fail "`podMonitorSelectorNilUsesHelmValues` no longer exists. See https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack#from-62x-to-63x" }}
    {{- end }}
    {{- if .Values.prometheus.prometheusSpec.probeSelectorNilUsesHelmValues }}
-      {{ fail "`probeSelectorNilUsesHelmValues` does no longer exist. See README section 'Upgrading Chart'" }}
+      {{ fail "`probeSelectorNilUsesHelmValues` no longer exists. See https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack#from-62x-to-63x" }}
    {{- end }}
    {{- if .Values.prometheus.prometheusSpec.ruleSelectorNilUsesHelmValues }}
-      {{ fail "`ruleSelectorNilUsesHelmValues` does no longer exist. See README section 'Upgrading Chart'" }}
+      {{ fail "`ruleSelectorNilUsesHelmValues` no longer exists. See https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack#from-62x-to-63x" }}
    {{- end }}
    {{- if .Values.prometheus.prometheusSpec.serviceMonitorSelectorNilUsesHelmValues }}
-      {{ fail "`serviceMonitorSelectorNilUsesHelmValues` does no longer exist. See README section 'Upgrading Chart'" }}
+      {{ fail "`serviceMonitorSelectorNilUsesHelmValues` no longer exists. See https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack#from-62x-to-63x" }}
    {{- end }}
    {{- if .Values.prometheus.prometheusSpec.scrapeConfigSelectorNilUsesHelmValues }}
-      {{ fail "`scrapeConfigSelectorNilUsesHelmValues` does no longer exist. See README section 'Upgrading Chart'" }}
+      {{ fail "`scrapeConfigSelectorNilUsesHelmValues` no longer exists. See https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack#from-62x-to-63x" }}
    {{- end }}
 {{- end }}
